--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello, World
+---
+layout: default
+title: Jose R. Diaz, E Corp
+---
+<div class="blurb">
+	<h1>Hi there, I'm Jose Diaz</h1>
+	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me.
+    <a href="/about">Read more about my life...</a>
+  </p>
+</div><!-- /.blurb -->
