--- a/about/index.html
+++ b/about/index.html
@@ -3,4 +3,20 @@ layout: default
 title: About me
 ---
 
-This is a simple test.
+I'm passionate about lots of things software & tech. I'm also a hobbyist bassist and appriciative of the outdoors.
+Since this site is mainly focused on my endevours in tech, I'll keep this section geeky.
+
+I have Computer Engineering background focused on Software Engineering. The below are my current areas of interest:
+ * Machine Learning + Recommender Systems
+ * Progressive Web Apps + EcmaScript + Web Assembly
+ * Distributed Systems (Paxos, Rift etc.)
+ * Algorithms
+ * Tech education
+
+I favor statically typed programming languages for working in large teams. However, I do enjoy type inference, specially in declaring local variabels.
+Generics, are great <3. No, Functional Progamming (FP) is not just for academics. Careful, though, this doesn't mean Object Oriented Programming (OOP) is bad and we
+should do away with it. OOP is great for systems that actually interact with the world, FP is more suited for data manipulations, pipelining etc.
+That's my take on the debate xD.
+
+Currently, I mainly work using ReactJS + the Hack progamming language. No tribalism here, I can switch / learn
+any programming language needed for the job.
