updated list of interest with posts class

--- a/about/index.html
+++ b/about/index.html
@@ -9,12 +9,12 @@ title: About me
   </p>
   <p>
   I have Computer Engineering background focused on Software Engineering. The below are my current areas of interest:
-  <ul>
-    <li>Machine Learning + Recommender Systems</li>
-    <li>Progressive Web Apps + EcmaScript + Web Assembly</li>
-    <li>Algorithms</li>
-    <li>Tech education</li>
-    <li>Distributed Systems (Paxos, Rift etc.)</li>
+  <ul class="posts">
+    <li><span>Machine Learning + Recommender Systems</span></li>
+    <li><span>Progressive Web Apps + EcmaScript + Web Assembly</span></li>
+    <li><span>Algorithms</span></li>
+    <li><span>Tech education</span></li>
+    <li><span>Distributed Systems (Paxos, Rift etc.)</span></li>
   </ul>
  </p>
  <p>
