fixing typo in ul

--- a/about/index.html
+++ b/about/index.html
@@ -10,11 +10,11 @@ title: About me
   <p>
   I have Computer Engineering background focused on Software Engineering. The below are my current areas of interest:
   <ul class="posts">
-    <li><span><strong>*</strong></span><span>Machine Learning + Recommender Systems</span></li>
-    <li><span><strong>*</strong></span><span>Progressive Web Apps + EcmaScript + Web Assembly</span></li>
-    <li><span><strong>*</strong></span><span>Algorithms</span></li>
-    <li><span><strong>*</strong></span><span>Tech education</span></li>
-    <li><span><strong>*</strong></span><span>Distributed Systems (Paxos, Rift etc.)</span></li>
+    <li><strong>*</strong><span> Machine Learning + Recommender Systems</span></li>
+    <li><strong>*</strong><span> Progressive Web Apps + EcmaScript + Web Assembly</span></li>
+    <li><strong>*</strong><span> Algorithms</span></li>
+    <li><strong>*</strong><span> Tech education</span></li>
+    <li><strong>*</strong><span> Distributed Systems (Paxos, Raft etc.)</span></li>
   </ul>
  </p>
  <p>
